running on port 3000

--- a/v0_6_8/dockerfiles/configs/nginx/conf.d/gekko.conf
+++ b/v0_6_8/dockerfiles/configs/nginx/conf.d/gekko.conf
@@ -1,11 +1,11 @@
 upstream websocket {
-    server localhost:3000;
+    server gekko:3000;
 }
 
 server {
     root /var/www/html;
     listen 80;
-    server_name {{DOMAIN}};
+    server_name _;
     proxy_read_timeout 720s;
     proxy_connect_timeout 720s;
     proxy_send_timeout 720s;
