--- a/v0_6_8/dockerfiles/configs/nginx/letsencrypt-conf.d/gekko.conf
+++ b/v0_6_8/dockerfiles/configs/nginx/letsencrypt-conf.d/gekko.conf
@@ -17,7 +17,7 @@ server {
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
     location / {
-        proxy_pass http://gekko;
+        proxy_pass http://gekko:3000;
         proxy_send_timeout          90;
         proxy_read_timeout          90;
         proxy_buffer_size           32k;
