--- a/v0_6_8/dockerfiles/configs/nginx/ssl-conf.d/gekko.conf
+++ b/v0_6_8/dockerfiles/configs/nginx/ssl-conf.d/gekko.conf
@@ -1,6 +1,6 @@
 #gekko server
 upstream websocket {
-    server gekko;
+    server gekko:3000;
 }
 
 server {
@@ -29,11 +29,11 @@ server {
     access_log /dev/stdout;
     error_log stderr;
 
-    # Redirect requests to magento backend server
+    # Redirect requests to backend server
     location / {
          proxy_redirect off;
          proxy_pass http://websocket;
-         # Add Headers for magento proxy mode
+         # Add Headers for proxy mode
          proxy_set_header X-Forwarded-Host $host;
          proxy_set_header X-Real-IP $remote_addr;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
