--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ before_install:
 - docker-compose --version
 install:
 - cd v0_6_8
-- docker-compose -f docker-compose build
-- docker-compose -f docker-compose up -d
+- docker-compose -f docker-compose.yml build
+- docker-compose -f docker-compose.yml up -d
 - docker-compose ps
 before_script:
 - pip install requests
